--- a/index.html
+++ b/index.html
@@ -5,8 +5,10 @@
     <link rel="icon" type="image/svg+xml" href="/src/static/SH.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Sam Hinz | Portfolio</title>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
-    <meta name="description" content="Professional portfolio showcasing my work, skills, and experience as a product manager.">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Red+Hat+Display:ital,wght@0,300..900;1,300..900&display=swap" rel="stylesheet">
+    <meta name="description" content="Sam Hinz | Product Manager Portfolio">
   </head>
   <body>
     <div id="root"></div>
