--- a/public/404.html
+++ b/public/404.html
@@ -4,14 +4,18 @@
     <meta charset="utf-8">
     <title>Sam Hinz - Portfolio</title>
     <script type="text/javascript">
-      // Simple redirect to index.html
-      var segmentCount = 0;
-      var location = window.location;
-      window.location.replace(
-        location.protocol + '//' + location.hostname + 
-        (location.port ? ':' + location.port : '') +
-        '/' +
-        window.location.pathname.split('/').slice(segmentCount + 1).join('/')
+      // Single Page Apps for GitHub Pages
+      // MIT License
+      // https://github.com/rafgraph/spa-github-pages
+      var pathSegmentsToKeep = 1;
+
+      var l = window.location;
+      l.replace(
+        l.protocol + '//' + l.hostname + (l.port ? ':' + l.port : '') +
+        l.pathname.split('/').slice(0, 1 + pathSegmentsToKeep).join('/') + '/?/' +
+        l.pathname.slice(1).split('/').slice(pathSegmentsToKeep).join('/').replace(/&/g, '~and~') +
+        (l.search ? '&' + l.search.slice(1).replace(/&/g, '~and~') : '') +
+        l.hash
       );
     </script>
   </head>
